fix(front drawers visibility): place header behind drawers by z-index
Closes #2098

--- a/src/app/custom/themes/inist/css/inist-styles.css
+++ b/src/app/custom/themes/inist/css/inist-styles.css
@@ -126,7 +126,7 @@ header {
     background-repeat: repeat-x;
     background-position: top left;
     opacity: 1;
-    z-index: 1150;
+    z-index: 1100;
     margin: 0;
     height: var(--height-header);
 }
